iframe fails to scroll in composited page https://bugs.webkit.org/show_bug.cgi?id=72682

Reviewed by Simon Fraser.

Source/WebCore:

FrameView::scrollContentsSlowPath only was catching the case where a
child iframe had a composited parent. Now detect if the child iframe
has any composited ancestor.

Test: compositing/iframes/scroll-grandchild-iframe.html

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsSlowPath):

LayoutTests:

* compositing/iframes/resources/scrollgrandchild-grandparent.html: Added.
* compositing/iframes/resources/scrollgrandchild-inner.html: Added.
* compositing/iframes/resources/scrollgrandchild-parent.html: Added.
* compositing/iframes/scroll-grandchild-iframe-expected.png: Added.
* compositing/iframes/scroll-grandchild-iframe-expected.txt: Added.
* compositing/iframes/scroll-grandchild-iframe.html: Added.


Canonical link: https://commits.webkit.org/91041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102649 268f45cc-cd09-0410-ab3c-d52691b4dbfc